Fri Jun 11 07:34:25 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): test the result of LOCALTIME.

Mon May 31 15:07:18 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* file.c (file_expand_path): Refix r28102: this breaks
	  r28039. test for [ruby-dev:41429] is added. [ruby-core:30516]

Mon May 31 02:17:54 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* insns.def (defined): respond_to_missing? may not be available
	  (for BasicObject instances).

Sun May 30 21:48:07 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* lib/tempfile.rb (Tempfile#unlink): leave @data.  Assigning nil to
	  @data caused double closing error of the same IO in finalizer.  a
	  patch from Simon Nicholls.  [ruby-core:29395]

Sun May 30 16:54:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* file.c (rb_file_directory_p): update rdoc.  a patch from Ilkka
	  Laukkanen.  [ruby-core:30016]

Sat Jun  5 16:39:13 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): show type name for RTypedData.

Sat Jun  5 10:03:31 2010  Tanaka Akira  <akr@fsij.org>

	* .gdbinit (rp): detect and show RTypedData.

Fri May 28 20:35:21 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (blocking_region_begin): avoid RUBY_VM_CHECK_INTS()
	call during GVL state transition. [Bug#3354] [ruby-dev:41435]

Fri Jun 11 00:42:45 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_localtime_r2): fix localtime overflow check.

Thu Jun 10 23:05:44 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (rb_localtime_r2): refine localtime overflow check for
	  FreeBSD 6.4.

Thu Jun 10 21:35:27 2010  Tanaka Akira  <akr@fsij.org>

	* time.c (find_time_t): always outerpolate from past.
	  [ruby-core:30672] reported by Benoit Daloze.
	  backport r28238 from trunk.

	* time.c (calc_tm_yday): extracted from timegmw_noleapsecond.
	  backport r28236 from trunk.

Thu Jun 10 10:06:25 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_putc): documentation updated to mention putc would